--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap");
+
 :root {
   /* Colour palette */
   --colour-blue-500: hsl(217, 54%, 11%);
@@ -8,19 +10,111 @@
   --colour-white: hsl(0, 0%, 100%);
 
   /* Font sizes */
-  --font-paragraph: 1.125rem;
+  --font-heading: 1.4rem;
+  --font-body: 1rem;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 html {
-  background-color: var(--colour-blue-400);
-  color: var(--colour-white);
-  font-size: var(--font-paragraph);
-}
-
-.card {
   background-color: var(--colour-blue-500);
+  color: var(--colour-white);
+  font-family: "Outfit", Arial, Helvetica, sans-serif;
+  font-size: 16px;
 }
 
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 24px;
+  margin: 0;
+}
+
+a {
+  color: var(--colour-white);
+  text-decoration: none;
+}
+
+/* NFT Preview Card */
+.card {
+  background-color: var(--colour-blue-400);
+  color: var(--colour-blue-200);
+  width: 100%;
+  max-width: 600px;
+  padding: 24px;
+  border-radius: 10px;
+}
+
+/* Preview image */
+.preview {
+  border-radius: 10px;
+  width: 100%;
+}
+
+/* Card heading */
+.card h2 {
+  color: var(--colour-white);
+  font-size: var(--font-heading);
+  font-weight: 600;
+}
+
+/* Card body text */
+.card p {
+  font-weight: 300;
+  font-size: var(--font-body);
+  line-height: 1.5;
+}
+
+/* NFT price and sale duration */
+.sale-info {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid var(--colour-blue-300);
+  padding-bottom: 16px;
+  margin-bottom: 16px;
+}
+
+.sale-info > div {
+  display: flex;
+  align-items: center;
+}
+
+.price {
+  color: var(--colour-blue-100);
+  font-size: var(--font-body);
+  font-weight: 600;
+}
+
+.duration {
+  color: var(--colour-blue-200);
+  font-size: var(--font-body);
+}
+
+.sale-info span {
+  padding-left: 8px;
+}
+
+/* Card footer (NFT creator and avatar) */
+.avatar {
+  width: 32px;
+  border: 1px solid var(--colour-white);
+  border-radius: 99px;
+}
+
+.creator {
+  display: flex;
+  align-items: center;
+}
+
+.creator span {
+  margin-left: 16px;
+}
+
+/* Stuff at the bottom */
 .attribution {
   font-size: 11px;
   text-align: center;
