Try to fix accessbility warnings

--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,19 @@ body {
   margin: 0;
 }
 
+/* Hide h1 visually */
+h1 {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
 a {
   color: var(--colour-white);
   text-decoration: none;
